alterada cor do body e colocado bordas em <p>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         }
 
         body{
-            background-color: bisque;
+            background-color: blue;
+        }
+
+        p{
+            border: 2px red solid;
         }
 
     </style>
@@ -29,6 +33,16 @@
 
     <h2>faz oq?</h2>
 
+
+<div>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Nesciunt placeat minima possimus ex libero dolores dolore 
+        quidem blanditiis voluptatibus consequatur eaque ducimus iste.</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Nesciunt placeat minima possimus ex libero dolores dolore 
+        quidem blanditiis voluptatibus consequatur eaque ducimus iste.</p>
+</div>
 
 <div>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
